# sync-panel

./: .commit-suffix.json  .gitignore  CHANGELOG.md  README.md  sync_panel_cli_entry.py
app/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
app/src/: App.css  App.tsx  api.ts  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: FileTree.tsx  Preview.tsx  SyncDialog.tsx
app/src/test/: e2e.test.tsx  fixture.ts  setup.ts
docs/: ui-style.md
shared-skills/tl-channel-workflow/: SKILL.md
shared-skills/tl-channel-workflow/references/: command-contract.md  patterns.md  safety.md
shared-skills/tl-channel-workflow/scripts/: tl_channel_workflow.py
sync_panel/: __init__.py  cli.py  config.py  engine.py  fsutil.py  jsonapi.py  model.py  test_engine.py  test_jsonapi.py
