[package]
name = "sync-panel"
version = "0.1.1"
description = "AI Workspace 同步面板"
edition = "2021"

[lib]
name = "sync_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
